add more content

--- a/index.html
+++ b/index.html
@@ -8,13 +8,39 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oregano:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="header">
-        <nav class="navbar"></nav>
+        <nav class="navbar">
+            <div class="left">
+                <div>HOME</div>
+                <div>ABOUT</div>
+                <div>REVIEWS</div>
+                <div>FIND US</div>
+            </div>
+            <div class="middle">Cafee</div>
+            <div class="right">
+                <div>SHOP</div>
+                <div>GIFTS</div>
+                <div>FEATURES</div>
+                <div>CONTACT</div>
+            </div>
+        </nav>
+        <section class="intro">
+            <div class="title">Prixima Canta Versonsda!</div>
+            <div class="text">Lorem ipsum dolor sit amet consectetur. Ac cras ut scelerisque fusce. Vestibulum amet sed cursus pretium rutrum commodo. Feugiat varius justo montes consequat ultricies ut habitant. Nunc pellentesque duis congue tristique. Consectetur suspendisse ligula lacus ut. Sed enim placerat consectetur posuere erat eget aliquam. Egestas tempus scelerisque nibh mi lorem nullam molestie morbi. Amet tortor est metus odio morbi ut.</div>
+            <div class="acquire-btn">ACQUIRE NOW</div>
+        </section>
     </main>
+    <section class="place">
+        <div class="title">Already in numerous places in Europe!</div>
+        <div class="countries">
+            
+        </div>
+    </section>
+    <section class="sponsors">uwu</section>
+    <section class="mission">uwu</section>
+    <section class="get-in-touch">uwu</section>
 </body>
 </html>
