add place section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
     <section class="place">
         <div class="title">Already in numerous places in Europe!</div>
         <div class="countries">
-            
+            <img src="./files/Amerstan_flag.svg" alt="">
+            <img src="./files/Iceland_flag.svg" alt="">
+            <img src="./files/Germany_flag.svg" alt="">
+            <img src="./files/France_flag.svg" alt="">
+            <img src="./files/Scotland_flag.svg" alt="">
+            <img src="./files/Wales_flag.svg" alt="">
+            <img src="./files/Northern_Ireland_flag.svg" alt="">
         </div>
     </section>
     <section class="sponsors">uwu</section>
