add new sponsor section

--- a/index.html
+++ b/index.html
@@ -33,20 +33,27 @@
             <div class="acquire-btn">ACQUIRE NOW</div>
         </section>
     </main>
-    <section class="place">
-        <div class="title">Already in numerous places in Europe!</div>
-        <div class="countries">
-            <img src="./files/Amerstan_flag.svg" alt="">
-            <img src="./files/Iceland_flag.svg" alt="">
-            <img src="./files/Germany_flag.svg" alt="">
-            <img src="./files/France_flag.svg" alt="">
-            <img src="./files/Scotland_flag.svg" alt="">
-            <img src="./files/Wales_flag.svg" alt="">
-            <img src="./files/Northern_Ireland_flag.svg" alt="">
-        </div>
+    <section class="second">
+        <section class="place">
+            <div class="title">Already in numerous places in Europe!</div>
+            <div class="countries">
+                <img src="./files/Amerstan_flag.svg" alt="">
+                <img src="./files/Iceland_flag.svg" alt="">
+                <img src="./files/Germany_flag.svg" alt="">
+                <img src="./files/France_flag.svg" alt="">
+                <img src="./files/Scotland_flag.svg" alt="">
+                <img src="./files/Wales_flag.svg" alt="">
+                <img src="./files/Northern_Ireland_flag.svg" alt="">
+            </div>
+        </section>
+        <section class="sponsors">
+            <div class="title">Meet our main sponsors!</div>
+            <img src="./files/Sponsor_box.svg" alt="">
+        </section>
+        <section class="mission">
+            <div class="title">Our Mission</div>
+        </section>
+        <section class="get-in-touch">uwu</section>
     </section>
-    <section class="sponsors">uwu</section>
-    <section class="mission">uwu</section>
-    <section class="get-in-touch">uwu</section>
 </body>
 </html>
