add new section mission

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         </section>
         <section class="mission">
             <div class="title">Our Mission</div>
+            <div class="mission-talk">
+                <img src="./files/mission-image.svg" alt="">
+                <div>Lorem ipsum dolor sit amet consectetur. Ac cras ut scelerisque fusce. Vestibulum amet sed cursus pretium rutrum commodo. Feugiat varius justo montes consequat ultricies ut habitant. Nunc pellentesque duis congue tristique. Consectetur suspendisse ligula lacus ut. Sed enim placerat consectetur posuere erat eget aliquam. Egestas tempus scelerisque nibh mi lorem nullam molestie morbi. Amet tortor est metus odio morbi ut.</div>
+            </div>
         </section>
         <section class="get-in-touch">uwu</section>
     </section>
