add last section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,46 @@
                 <div>Lorem ipsum dolor sit amet consectetur. Ac cras ut scelerisque fusce. Vestibulum amet sed cursus pretium rutrum commodo. Feugiat varius justo montes consequat ultricies ut habitant. Nunc pellentesque duis congue tristique. Consectetur suspendisse ligula lacus ut. Sed enim placerat consectetur posuere erat eget aliquam. Egestas tempus scelerisque nibh mi lorem nullam molestie morbi. Amet tortor est metus odio morbi ut.</div>
             </div>
         </section>
-        <section class="get-in-touch">uwu</section>
+        <section class="get-in-touch">
+            <div class="title">Get in Touch Today!</div>
+            <div class="touch-form">
+                <div class="first">
+                    <form>
+                        <div class="left">
+                            <div class="form-pair">
+                                <label for="firstname">First Name</label>
+                                <input id="firstname" type="text">
+                            </div>
+                            <div class="form-pair">
+                                <label for="lastname">Last Name</label>
+                                <input id="lastname" type="text">
+                            </div>
+                            <div class="form-special-pair">
+                                <div>
+                                    <label for="age">Age</label>
+                                    <input id="age" type="text" inputmode="numeric" maxlength="3">
+                                </div>
+                                <div>
+                                    <label for="phone">Phone Number</label>
+                                    <input id="phone" type="text" inputmode="numeric" maxlength="9" placeholder="xxxxxxxxx">
+                                </div>
+                            </div>
+                            <div class="form-pair">
+                                <label for="email">Email Address</label>
+                                <input id="email" type="email">
+                            </div>
+                        </div>
+                        <button class="right" id="right-btn" type="submit">JOIN TODAY</button>
+                    </form>
+                </div>
+                <div class="second">
+                    <div class="f-title">But actually... why?</div>
+                    <div class="f-text">Lorem ipsum dolor sit amet consectetur. Ac cras ut scelerisque fusce. <strong class="link">Amerstan & Iceland cooperate to</strong> cursus pretium rutrum commodo. Feugiat varius justo montes consequat ultricies ut habitant. Nunc pellentesque duis congue tristique. Consectetur suspendisse ligula lacus ut. </div>
+                </div>
+            </div>
+        </section>
+        <section class="last"></section>
     </section>
+    <script src="./dist/js/code.js"></script>
 </body>
 </html>
